{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "c19fecdb-fe6d-477d-bd2a-b020b0adec3a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "29ad960c-9112-4f64-b863-10420d959021",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "PassThrough",
                    "id": "24635b37-b5ad-47a9-9d49-fd21d4a788a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "abde9e10-89db-4438-9f2a-21a2ea09a9f1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8f5cce36-b1f0-46dd-96b2-f77d069afdb4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB + M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "adc22214-ab28-40e5-bb56-a3986a283ad0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB + M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3a61198c-28b9-4bd7-8536-01ed3e719e9e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB + M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5321da00-2f22-4f29-9037-39bc47bdc145",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB + M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c5970780-3a21-41c0-81f8-737a5e819284",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abd0cdb7-8320-4876-a2f7-30f308306227",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a41445b0-52c1-4ba0-84f1-566694bef1ae",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB + M",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Designer",
            "id": "90769658-531e-4915-b867-91aa70680c7b",
            "actions": [
                {
                    "name": "GravityCycle",
                    "type": "Button",
                    "id": "017f211f-30f1-4aef-b1d4-8ac9fbbf2592",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovementSpeedCycle",
                    "type": "Button",
                    "id": "861a8c3c-f236-437d-a876-dfbebd47001a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpHeightCycle",
                    "type": "Button",
                    "id": "48b381f6-48ec-46a2-9a8b-fbc267c5229d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4da574c-4d99-40b6-bf53-f4ec01be5730",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "GravityCycle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "323e9012-f142-45dc-af9b-e3cb1a92178f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "MovementSpeedCycle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa1ffa10-9713-439a-b7ec-51b140ea009c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "JumpHeightCycle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KB + M",
            "bindingGroup": "KB + M",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}